added dark theme media query to change to correct color

--- a/styles/components/_profile.scss
+++ b/styles/components/_profile.scss
@@ -65,6 +65,10 @@
     font-size: $text--sml;
     color: $primary-color-dm;
 
+    @include darkTheme {
+      color: $special-color;
+    }
+
     @include md {
       font-size: $text--bg;
     }
